Added endpoint for users to join event
