# src/main/resources/api-definition.yml
@@ -101,11 +101,33 @@ paths:
           description: Created event
         '405':
           description: Failed to create event
+  /event/join:
+      post:
+        tags:
+          - event
+        summary: Join an event
+        description: Join an existing event
+        operationId: joinEvent
+        consumes:
+          - application/json
+        produces:
+          - application/json
+        parameters:
+          - in: body
+            name: body
+            description: Join Event Data
+            schema:
+              $ref: '#/definitions/JoinEventData'
+        responses:
+          '201':
+            description: Joined event
+          '405':
+            description: Failed to join event
 definitions:
   Event:
     type: object
     properties:
-      userID:
+      eventID:
         type: string
       userSecret:
         type: string
@@ -131,7 +153,7 @@ definitions:
       registeredMembers:
         type: array
         items:
-          $ref: '#/definitions/User'
+          type: string
       possibleMemberCount:
         type: integer
       currentMemberCount:
@@ -155,4 +177,13 @@ definitions:
       mail:
         type: string
       token:
+        type: string
+  JoinEventData:
+    type: object
+    properties:
+      userID:
+        type: string
+      token:
+        type: string
+      eventID:
         type: string
